# cmaker

./: Cargo.toml
.github/workflows/: build.yml  rust.yml
src/: global.rs  main.rs  utils.rs
src/abstraction/: link_script.rs  mod.rs  object.rs  symbol.rs  target.rs
src/cli/: app.rs  config.yml
src/parsing/: collection.rs  mod.rs  parser.rs
