[package]
name = "cmaker"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.0"
regex = "1.3.1"
cpp_demangle = "0.2.14"
path-dedot = "1.1.13"
clap = "2.33.0"
jemallocator = "0.3.2"
simd-json = "0.1.26"
lz4 = "1.23.1"
serde_json = "1.0.41"
hashbrown = "0.6.3"

serde = {verison = "1.0.102", features = ["derive"]}