[package]
name = "cmaker"
version = "1.2.5"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3

[dependencies]
rayon = "1.2.0"
clap = { version = "2.33.0", features = ["yaml"]}
jemallocator = "0.3.2"
serde_json = "1.0.41"
lazy_static = "*"
yaml-rust = "0.3.5"
memchr = "2.2.1"
twoway = "0.2.1"
serde = {version = "1.0.102", features = ["derive"]}
